# storm

./: .clang-format  .clang-tidy  .gitignore  .lint-skip  404.html  BENCHMARKS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  IMPROVEMENTS.md  KNOWN_ISSUES.md  LICENSE  README.md  SELECT_PERFORMANCE_ANALYSIS.md  UPDATE_OPTIMIZATION_REPORT.md  adaptive_threshold_large_batches_analysis.md  bench  bench.py  commit.sh  debug_sql.cpp  default.profraw  envs.cmake  fair_comparison_results.md  field_aware_adaptive_threshold_results.md  git-worktree-helper.sh  index.html  join_performance_analysis.sh  main.sh  mkdocs.yml  performance_comparison.sh  performance_comparison_release.sh  quick_commit.sh  rules.md  run_all_microbenchmarks.sh  setup_env.sh  sitemap.xml  sonar-project.properties  sql_generation_analysis.sh  test.cpp
.claude/: SONARCLOUD_SETUP.md  rtk-hook.sh  settings.json  settings.local.json
.githooks/: pre-commit  pre-push
benchmarks/: .clang-tidy  CMakeLists.txt  README.md  README_UNIFIED.md  anchors_raw.cpp  base.cppm  bench_aggregate.cpp  bench_distinct.cpp  bench_distinct_scaling.cpp  bench_join.cpp  bench_join_performance.cpp  bench_limit.cpp  bench_limit_comparison.cpp  bench_model_comparison.cpp  bench_parallel.sh  bench_register.h  bench_select_analysis.cpp  bench_select_comparison.cpp  bench_simple_select.cpp  bench_sqlite.cpp  bench_sqlite_orm.cpp  bench_storm.cpp  bench_storm_optimized.cpp  bench_unified.cpp  bench_where.cpp  benchmark_cli.hpp  benchmark_git.hpp  benchmark_insert_optimization.cpp  benchmark_registry.hpp  benchmark_tests.hpp  cache_probe.cpp  crud_benchmark.cppm  join_performance_microbench.cpp  m2m_models.hpp  main.cpp  microbench_callback.cpp  microbench_extraction.cpp  microbench_raw_vs_wrapper.cpp  microbench_select_clean.cpp  microbench_select_trace.cpp  (+20 more)
benchmarks/common/: benchmark_utils.hpp
benchmarks/dashboard/: CMakeLists.txt  args.hpp  backup.hpp  dashboard_args.hpp  dashboard_backup.hpp  dashboard_db.hpp  db.hpp  events.hpp  main.cpp  models.hpp  reporter.cpp  reporter.h  row_classify.hpp  socket_server.cppm  tui.cppm  tui_render.hpp  tui_terminal.hpp  wire.cppm  wire.hpp
benchmarks/dashboard/migrations/: 20260504161632.sql  20260507045752.sql  20260601130609.sql  20260601181343.sql  atlas.sum
benchmarks/operations/: aggregate.hpp  base.hpp  delete.hpp  distinct.hpp  first_get.hpp  insert.hpp  query_benchmark.hpp  select.hpp  select_join.hpp  select_query_base.hpp  select_where_join.hpp  setop.hpp  update.hpp  where_operators.hpp
benchmarks/scripts/: compare_against_baseline.sh  compare_against_raw.sh  render_pr_comment.py  yaml_to_json.py
benchmarks/tests/: benchmark_tests.json  benchmark_tests.yaml
cmake/: bench.cmake  cmake-scripts.cmake  coverage-targets.cmake  coverage.cmake  cpm.cmake  cxx_flags.cmake  db.cmake  format.cmake  fuzz.cmake  gcc_flags.cmake  import_std_probe.cmake  libcxx.cmake  python.cmake  sanitizers.cmake  storm_migrations.cmake  storm_schema_main.cpp.in  tests.cmake  tools.cmake  uuid.cmake
docs/: COOKBOOK.md  NEGATIVE_VALUES_SAFETY.md  README.md  SELECT_MODEL_COMPARISON.md  (+2 more)
fuzz/: CMakeLists.txt  fuzz_batch_insert.cpp  fuzz_connection_string.cpp  fuzz_like_pattern.cpp  fuzz_models.h  fuzz_where_int.cpp  fuzz_where_string.cpp
python/: CMakeLists.txt  README.md  benchmark.py  bindings.cpp  demo.py
scripts/: README.md  (+16 more)
tests/: .clang-tidy  CMakeLists.txt  PsqlTest.h  SQLiteTest.h  atlas.hcl  config.json  main.cpp  sqlite_test.h  test_aggregate.cpp  test_all_types.cpp  test_coverage_additional.cpp  test_coverage_gaps.cpp  test_db_helpers.h  test_distinct.cpp  test_fk_fields.cpp  test_limit_offset.cpp  test_meta.cpp  test_models.h  test_order_by.cpp  test_orm_schema.cpp  test_parser.hpp  test_query_dispatch.h  test_query_runner_base.h  test_seed_helpers.h  test_select.cpp  test_select_large.cpp  test_select_one.cpp  test_select_runner.h  test_sql_inspection.cpp  test_sqlite.cpp  test_sqlite_errors.cpp  test_types.cpp  test_values.cpp  test_where.cpp  test_write_runner.h  test_yaml_register.h
tests/bench_dashboard/: test_dashboard_result_counter.cpp  test_dashboard_run_branch.cpp  test_raw_baseline.cpp  test_row_classify.cpp
tests/crud/: test_auto_timestamps.cpp  test_conditional_erase.cpp  test_conditional_update.cpp  test_crud.cpp  test_crud_lifecycle.cpp  test_insert_no_return.cpp  test_insert_returning.cpp  test_select.cpp  test_select_large.cpp  test_select_one.cpp
tests/db/: test_cache_invalidation.cpp  test_pg_stmt_leak.cpp  test_pool.cpp  test_sqlite_tuning.cpp  test_statement_cache_threading.cpp  test_statement_move.cpp  test_transaction.cpp
tests/errors/: test_error_construction.cpp  test_sqlite_errors.cpp
tests/mock_libpq/: CMakeLists.txt  mock_libpq.cpp  mock_libpq.h  test_orm_pg_mock_errors.cpp  test_pq_mock.cpp
tests/mock_sqlite/: CMakeLists.txt  mock_sqlite3.cpp  mock_sqlite3.h  test_orm_mock_errors.cpp  test_sqlite_mock.cpp
tests/query/: test_aggregate.cpp  test_aggregate_combined.cpp  test_aggregate_fixture.h  test_aggregate_groupby.cpp  test_aggregate_having.cpp  test_aggregate_optional.cpp  test_collate.cpp  test_distinct.cpp  test_expected_transform.cpp  test_join_wide.cpp  test_limit_offset.cpp  test_m2m_models.h  test_many_to_many.cpp  test_many_to_many_modifiers.cpp  test_many_to_many_multi.cpp  test_many_to_many_through.cpp  test_order_by.cpp  test_reverse_fk.cpp  test_reverse_fk_models.h  test_rows.cpp  test_setop.cpp  test_sql_verify.cpp  test_values.cpp  test_where.cpp  test_where_complex.cpp  test_where_integer_fold.cpp  test_where_lifetime.cpp  test_where_temporal.cpp
tests/schema/: test_bool_default.cpp  test_column_default.cpp  test_fk_fields.cpp  test_orm_schema.cpp  test_referential_integrity.cpp  test_short_annotations.cpp  test_sql_inspection.cpp  test_types.cpp
tests/scripts/: gen_unified_json.py  migrate_unified_yaml.py
tests/test_cases/: unified_cases.yaml
tests/tools/: CMakeLists.txt
tests/tools/migrations/: 20260328195031_initial.sql  atlas.sum
tests/tools/storm_schema/: CMakeLists.txt  models.h
tests/yaml/: test_unified_yaml.cpp
(+396 files in other folders)
